# cwchessboard

./: .gitignore  .gitmodules  Array.h  BitBoard.h  BitBoardTest.h  CMakeLists.txt  CastleFlags.cc  CastleFlags.cxx  CastleFlags.h  ChessGame.cc  ChessGame.cxx  ChessGame.h  ChessNotation.cc  ChessNotation.cxx  ChessNotation.h  ChessPosition.cc  ChessPosition.cxx  ChessPosition.h  ChessPositionTest.h  ChessPositionWidget.cc  ChessPositionWidget.cxx  ChessPositionWidget.h  ChessboardWidget.cc  ChessboardWidget.cxx  ChessboardWidget.h  Code.cc  Code.cxx  Code.h  CodeTest.h  Color.h  ColorTest.h  CountBoard.h  CwChessboard.c  CwChessboard.cc  CwChessboard.cxx  CwChessboard.h  CwChessboardCodes.h  Direction.cc  Direction.cxx  Direction.h  (+98 more)
doc/: Makefile.am  download.dox  doxygen.config.in  html.footer.in  html.header.in  main.css  mainpage.dox
